# llvm-obfuscator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BEFORE_AFTER.md
obfuscator/: backend.py  cli.py  frontend.py  ir_model.py  ir_writer.py  toolchain.py  verify.py
obfuscator/passes/: __init__.py  base.py  bogus_control_flow.py  control_flow_flattening.py  instruction_substitution.py  string_encryption.py
tests/: conftest.py  test_end_to_end.py  test_passes_unit.py  test_pipeline.py
tests/fixtures/: branching.c  loop.c  strings.c
